Tooltips - fixed issue where they would sometimes be unreadable due to being in an overflow: hidden container

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,15 @@
 @tailwind utilities;
 
 @layer base {
+  input:-webkit-autofill {
+    -webkit-box-shadow:0 0 0 50px white inset; /* Change the color to your own background color */
+    -webkit-text-fill-color: #333;
+}
 
+input:-webkit-autofill:focus {
+    -webkit-box-shadow: 0 0 0 50px white inset;/*your box-shadow*/
+    -webkit-text-fill-color: #333;
+  } 
 }
 
 @layer components {
@@ -28,7 +36,7 @@
   }
 
   .input {
-    @apply shadow-md px-6 py-2 border border-slate-300 text-black
+    @apply shadow-md px-6 py-2 border border-slate-300 text-black dark:bg-white
   }
 
   .label {
